# bjj

./: README.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt
docs/: SUMMARY.md  index.md
docs/positions/: index.md  standing.md
docs/positions/guard/: closed.md  half.md  open.md
docs/positions/mount/: standard.md  technical.md
docs/submissions/: index.md
docs/submissions/chokes/: index.md  triangle.md
docs/submissions/joint-locks/: armbar.md  kimura.md
docs/sweeps/: half-guard-sweeps.md  index.md
docs/sweeps/closed-guard/: flower.md
docs/taxonomy/: index.md
docs/taxonomy/positions/: back-control.md  index.md  side-control.md
docs/taxonomy/positions/guard/: closed.md  index.md
docs/taxonomy/positions/mount/: index.md  s-mount.md
docs/taxonomy/submissions/chokes/: blood-chokes.md  cross-collar.md  triangle.md
docs/taxonomy/submissions/joint-locks/: americana.md  index.md  omoplata.md  upper-body.md
docs/taxonomy/sweeps/: closed-guard-sweeps.md  open-guard-sweeps.md  other-sweeps.md
docs/taxonomy/sweeps/closed-guard/: hip-bump.md  scissor.md
docs/taxonomy/transitions/: index.md
docs/taxonomy/transitions/transitions/: guard-retention.md
docs/transitions/: index.md
docs/transitions/escapes/: index.md
docs/transitions/passes/: index.md  knee-slice.md
docs/transitions/transitions/: index.md
